hphp/hack/test/sound_dynamic/typing/sub_function_type_dynamic.bad.php.exp
File "sub_function_type_dynamic.bad.php", line 11, characters 3-20:
Typing error (Typing[4110])
  File "sub_function_type_dynamic.bad.php", line 11, characters 14-20:
  Expected `dynamic`
  File "sub_function_type_dynamic.bad.php", line 7, characters 3-21:
  Type `(function(int): int)` is not a subtype of `dynamic` under dynamic-aware subtyping
File "sub_function_type_dynamic.bad.php", line 12, characters 3-20:
Typing error (Typing[4110])
  File "sub_function_type_dynamic.bad.php", line 12, characters 14-20:
  Expected `dynamic`
  File "sub_function_type_dynamic.bad.php", line 8, characters 3-34:
  Type `(function(mixed, dynamic): mixed)` is not a subtype of `dynamic` under dynamic-aware subtyping
File "sub_function_type_dynamic.bad.php", line 13, characters 3-20:
Typing error (Typing[4110])
  File "sub_function_type_dynamic.bad.php", line 13, characters 14-20:
  Expected `dynamic`
  File "sub_function_type_dynamic.bad.php", line 9, characters 3-25:
  Type `(function(): vec<mixed>)` is not a subtype of `dynamic` under dynamic-aware subtyping
File "sub_function_type_dynamic.bad.php", line 14, characters 3-20:
Typing error (Typing[4110])
  File "sub_function_type_dynamic.bad.php", line 14, characters 14-20:
  Expected `dynamic`
  File "sub_function_type_dynamic.bad.php", line 10, characters 3-16:
  Type `(function(): C)` is not a subtype of `dynamic` under dynamic-aware subtyping
File "sub_function_type_dynamic.bad.php", line 15, characters 3-36:
Typing error (Typing[4110])
  File "sub_function_type_dynamic.bad.php", line 15, characters 30-36:
  Expected `dynamic`
  File "sub_function_type_dynamic.bad.php", line 15, characters 4-20:
  Type `(function(int $x): int)` is not a subtype of `dynamic` under dynamic-aware subtyping
File "sub_function_type_dynamic.bad.php", line 16, characters 3-33:
Typing error (Typing[4110])
  File "sub_function_type_dynamic.bad.php", line 16, characters 27-33:
  Expected `dynamic`
  File "sub_function_type_dynamic.bad.php", line 16, characters 4-17:
  Type `(function(mixed $x): C)` is not a subtype of `dynamic` under dynamic-aware subtyping
